--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,41 @@
+node_modules/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Build
+build/
+dist/
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+.vscode/
+.idea/
+*.swp
+
+# Dependency directories
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# Testing
+coverage/
+
+# Misc
+*.log
+*.lock
+*.cache
+
+# Service workers
+workbox-*
+
+# React Native
+.expo/
+
+# TypeScript
+*.tsbuildinfo
